// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > getModelsSearch > 200 > ok 1`] = `
{
  "results": [
    {
      "description": "description",
      "id": "test",
      "kind": "model",
      "name": "name",
      "tags": [],
    },
  ],
  "totalEntries": 1,
}
`;

exports[`routes > model > getModelsSearch > audit > expected call 1`] = `
[
  {
    "description": "description",
    "id": "test",
    "kind": "model",
    "name": "name",
    "tags": [],
  },
]
`;
